--- a/Website/Frontend/stylessheet.css
+++ b/Website/Frontend/stylessheet.css
@@ -109,7 +109,7 @@ body {
 }
 
 .content h3 {
-    color: #7d81c2;
+    color: #0d2c75;
     font-size: 1rem;
     margin-bottom: 20px;
 }
@@ -143,7 +143,7 @@ body {
 
 .btn-generate {
     padding: 10px 20px;
-    background-color: #7d81c2;
+    background-color: #0d2c75;
     color: white;
     border: none;
     border-radius: 5px;
@@ -153,5 +153,5 @@ body {
 }
 
 .btn-generate:hover {
-    background-color: #5c61a7;
+    background-color: #3567e6;
 }
